--- a/Resources/DarkTheme.qss
+++ b/Resources/DarkTheme.qss
@@ -59,3 +59,23 @@ border: 2px solid red;
 QScrollArea QWidget{
     background-color: #1d2438;
 }
+
+QSlider::groove:horizontal{
+    background: green;
+    position: absolute; /* absolutely position 4px from the left and right of the widget. setting margins on the widget should work too... */
+    left: 4px; right: 4px;
+}
+
+QSlider::handle:horizontal {
+    height: 10px;
+    background: blue;
+    margin: 0 -4px; /* expand outside the groove */
+}
+
+QSlider::add-page:horizontal {
+    background: white;
+}
+
+QSlider::sub-page:horizontal {
+    background: yellow;
+}
