Added Icons changed theme, Made small bug fixes

--- a/Resources/DarkTheme.qss
+++ b/Resources/DarkTheme.qss
@@ -1,7 +1,6 @@
 QWidget{
-    background-color: #252f4a;
+    background-color: #13131E;
 }
-
 
 QLabel{
     color: #ffffff;
@@ -9,20 +8,12 @@ QLabel{
     font-size: 14px;
 }
 
-QPushButton{
-    color: #ffffff;
-    height: 40px;
-    background-color: #1291cc;
-    border-radius: 2px;
-    font-size: 18px;
-}
-
 QPushButton:hover{
     border: 2px solid #1b24de;
 }
 
 QPushButton:checked{
-    background-color: #0e5d9e;
+    background-color: #060648;
 }
 
 QLineEdit{
@@ -33,17 +24,51 @@ QLineEdit{
 }
 
 
+#VerticalTab QWidget{
+    background-color: #1B1F38;
+}
+#VerticalTab QScrollArea QWidget{
+    background-color: #110B1E;
+}
+
+#VerticalTab QPushButton{
+    color: #ffffff;
+    height: 40px;
+    background-color: #04041D;
+    border-radius: 2px;
+    font-size: 18px;
+    text-align: center;
+    border-radius: 25;
+
+}
+
+#VerticalTab QPushButton:hover{
+    border: 2px solid #1b24de;
+}
+
+#VerticalTab QPushButton:checked{
+    background-color: #060648;
+}
+
+#VerticalTab QLabel{
+    background-color: transparent;
+}
+
+#Settings QPushButton{
+    background-color: #6416cc;
+}
+
 #EditableLabel QLineEdit[valid="false"]{
 border: 2px solid red;
 }
 
 #EditableLabel QPushButton{
+    background-color: #290757;
     width: 50px;
-    background-color: #0c8fc7;
 }
 
-#EditableLabel QPushButton:hover{
-    background-color: #096c96;
+#EditableLabel QPushButton: hover{
+    background-color: #290757;
 }
 
 #Tile{
@@ -56,48 +81,21 @@ border: 2px solid red;
     border-radius: 2px;
 }
 
-QScrollArea QWidget{
-    background-color: #1d2438;
-}
-
-QSlider::groove:horizontal{
-    background: green;
-    position: absolute; /* absolutely position 4px from the left and right of the widget. setting margins on the widget should work too... */
-    left: 4px; right: 4px;
-}
-
-QSlider::handle:horizontal {
-    height: 10px;
-    background: blue;
-    margin: 0 -4px; /* expand outside the groove */
-}
-
-QSlider::add-page:horizontal {
-    background: white;
-}
-
-QSlider::sub-page:horizontal {
-    background: yellow;
-}
-
-#CurrentlyPlaying>QPushButton{
+#CurrentlyPlaying QPushButton{
     border-radius: 25;
-
-}
-/*
-QPushButton#Next{
-    image: url("Resources/Icons/Next-btnDark.png");
 }
 
-QPushButton#Next:hover{
-    image: url("Resources/Icons/Next-btnLight.png");
+#VerticalTab QSlider::groove:horizontal {
+    border: 1px solid #999999;
+    height: 8px; /* the groove expands to the size of the slider by default. by giving it a height, it has a fixed size */
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 #B1B1B1, stop:1 #c4c4c4);
+    margin: 2px 0;
 }
 
-QPushButton#Previous{
-    image: url("Resources/Icons/Previous-btnDark.png");
+#VerticalTab QSlider::handle:horizontal {
+    background: qlineargradient(x1:0, y1:0, x2:1, y2:1, stop:0 #b4b4b4, stop:1 #8f8f8f);
+    border: 1px solid #5c5c5c;
+    width: 18px;
+    margin: -2px 0; /* handle is placed by default on the contents rect of the groove. Expand outside the groove */
+    border-radius: 3px;
 }
-
-QPushButton#Previous:hover{
-    image: url("Resources/Icons/Previous-btnLight.png");
-}
-*/
